fix text color on mobile in dark mode

--- a/client/src/document/ingredients/browser-compatibility-table/index.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/index.scss
@@ -185,6 +185,12 @@
   }
 
   .bc-icon-cell {
+    color: #212121;
+
+    @media screen and (min-width: $screen-sm) {
+      color: inherit;
+    }
+
     &[aria-expanded="true"] {
       &:after {
         display: none;
